decryptionpolicy/lib/dpParser.py
# Generated from dp.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dpParser ( Parser ):

    grammarFileName = "dp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'/'", "'['", "']'", "':'", "'\"'", "'&'", 
                     "'{'", "'}'", "'()'", "'|'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'_'", "'#'", "'$'", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TBO", "TBC", "COLON", "AP", 
                      "AND", "BO", "BC", "BRACKET", "OR", "COMA", "ENCRYPTEDBY", 
                      "WHERE", "ROLES", "RULES", "UNDERSCORE", "HASH", "VAR", 
                      "SIGNEDBY", "STRING", "WS", "COMMENT" ]

    RULE_policy = 0
    RULE_statement = 1
    RULE_rolePolicy = 2
    RULE_rulePolicy = 3
    RULE_expression = 4
    RULE_encryptor = 5
    RULE_name = 6
    RULE_component = 7
    RULE_identifier = 8
    RULE_literal = 9
    RULE_constraints = 10
    RULE_constraint = 11
    RULE_constraint_body = 12
    RULE_components = 13
    RULE_function = 14
    RULE_granularities = 15
    RULE_granularity = 16
    RULE_ustring = 17
    RULE_hstring = 18
    RULE_variable = 19
    RULE_slash = 20

    ruleNames =  [ "policy", "statement", "rolePolicy", "rulePolicy", "expression", 
                   "encryptor", "name", "component", "identifier", "literal", 
                   "constraints", "constraint", "constraint_body", "components", 
                   "function", "granularities", "granularity", "ustring", 
                   "hstring", "variable", "slash" ]

    EOF = Token.EOF
    T__0=1
    TBO=2
    TBC=3
    COLON=4
    AP=5
    AND=6
    BO=7
    BC=8
    BRACKET=9
    OR=10
    COMA=11
    ENCRYPTEDBY=12
    WHERE=13
    ROLES=14
    RULES=15
    UNDERSCORE=16
    HASH=17
    VAR=18
    SIGNEDBY=19
    STRING=20
    WS=21
    COMMENT=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.StatementContext)
            else:
                return self.getTypedRuleContext(dpParser.StatementContext,i)


        def getRuleIndex(self):
            return dpParser.RULE_policy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicy" ):
                listener.enterPolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicy" ):
                listener.exitPolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicy" ):
                return visitor.visitPolicy(self)
            else:
                return visitor.visitChildren(self)




    def policy(self):

        localctx = dpParser.PolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_policy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 42
                self.statement()
                self.state = 45 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dpParser.UNDERSCORE) | (1 << dpParser.HASH) | (1 << dpParser.VAR) | (1 << dpParser.STRING))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rolePolicy(self):
            return self.getTypedRuleContext(dpParser.RolePolicyContext,0)


        def rulePolicy(self):
            return self.getTypedRuleContext(dpParser.RulePolicyContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = dpParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 49
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.rolePolicy()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 48
                self.rulePolicy()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RolePolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dpParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(dpParser.COLON, 0)

        def expression(self):
            return self.getTypedRuleContext(dpParser.ExpressionContext,0)


        def constraints(self):
            return self.getTypedRuleContext(dpParser.ConstraintsContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_rolePolicy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRolePolicy" ):
                listener.enterRolePolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRolePolicy" ):
                listener.exitRolePolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRolePolicy" ):
                return visitor.visitRolePolicy(self)
            else:
                return visitor.visitChildren(self)




    def rolePolicy(self):

        localctx = dpParser.RolePolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_rolePolicy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.identifier()
            self.state = 52
            self.match(dpParser.COLON)
            self.state = 53
            self.expression()
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==dpParser.WHERE:
                self.state = 54
                self.constraints()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulePolicyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dpParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(dpParser.COLON, 0)

        def granularities(self):
            return self.getTypedRuleContext(dpParser.GranularitiesContext,0)


        def encryptor(self):
            return self.getTypedRuleContext(dpParser.EncryptorContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_rulePolicy

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRulePolicy" ):
                listener.enterRulePolicy(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRulePolicy" ):
                listener.exitRulePolicy(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRulePolicy" ):
                return visitor.visitRulePolicy(self)
            else:
                return visitor.visitChildren(self)




    def rulePolicy(self):

        localctx = dpParser.RulePolicyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rulePolicy)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.identifier()
            self.state = 58
            self.match(dpParser.COLON)
            self.state = 59
            self.granularities()
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==dpParser.ENCRYPTEDBY:
                self.state = 60
                self.encryptor()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def name(self):
            return self.getTypedRuleContext(dpParser.NameContext,0)


        def identifier(self):
            return self.getTypedRuleContext(dpParser.IdentifierContext,0)


        def literal(self):
            return self.getTypedRuleContext(dpParser.LiteralContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = dpParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.name()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.literal()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EncryptorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENCRYPTEDBY(self):
            return self.getToken(dpParser.ENCRYPTEDBY, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(dpParser.IdentifierContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.OR)
            else:
                return self.getToken(dpParser.OR, i)

        def getRuleIndex(self):
            return dpParser.RULE_encryptor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEncryptor" ):
                listener.enterEncryptor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEncryptor" ):
                listener.exitEncryptor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEncryptor" ):
                return visitor.visitEncryptor(self)
            else:
                return visitor.visitChildren(self)




    def encryptor(self):

        localctx = dpParser.EncryptorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_encryptor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(dpParser.ENCRYPTEDBY)
            self.state = 69
            self.identifier()
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dpParser.OR:
                self.state = 70
                self.match(dpParser.OR)
                self.state = 71
                self.identifier()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def component(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.ComponentContext)
            else:
                return self.getTypedRuleContext(dpParser.ComponentContext,i)


        def slash(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.SlashContext)
            else:
                return self.getTypedRuleContext(dpParser.SlashContext,i)


        def getRuleIndex(self):
            return dpParser.RULE_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterName" ):
                listener.enterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitName" ):
                listener.exitName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitName" ):
                return visitor.visitName(self)
            else:
                return visitor.visitChildren(self)




    def name(self):

        localctx = dpParser.NameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self.component()
                    self.state = 78
                    self.slash()

                else:
                    raise NoViableAltException(self)
                self.state = 82 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 84
            self.component()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(dpParser.LiteralContext,0)


        def identifier(self):
            return self.getTypedRuleContext(dpParser.IdentifierContext,0)


        def function(self):
            return self.getTypedRuleContext(dpParser.FunctionContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_component

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponent" ):
                listener.enterComponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponent" ):
                listener.exitComponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponent" ):
                return visitor.visitComponent(self)
            else:
                return visitor.visitChildren(self)




    def component(self):

        localctx = dpParser.ComponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_component)
        try:
            self.state = 89
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.function()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(dpParser.STRING, 0)

        def ustring(self):
            return self.getTypedRuleContext(dpParser.UstringContext,0)


        def hstring(self):
            return self.getTypedRuleContext(dpParser.HstringContext,0)


        def variable(self):
            return self.getTypedRuleContext(dpParser.VariableContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_identifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier" ):
                listener.enterIdentifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier" ):
                listener.exitIdentifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = dpParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_identifier)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dpParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.match(dpParser.STRING)
                pass
            elif token in [dpParser.UNDERSCORE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.ustring()
                pass
            elif token in [dpParser.HASH]:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.hstring()
                pass
            elif token in [dpParser.VAR]:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.variable()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AP(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.AP)
            else:
                return self.getToken(dpParser.AP, i)

        def STRING(self):
            return self.getToken(dpParser.STRING, 0)

        def getRuleIndex(self):
            return dpParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLiteral" ):
                return visitor.visitLiteral(self)
            else:
                return visitor.visitChildren(self)




    def literal(self):

        localctx = dpParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_literal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(dpParser.AP)

            self.state = 98
            self.match(dpParser.STRING)

            self.state = 99
            self.match(dpParser.AP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(dpParser.WHERE, 0)

        def constraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.ConstraintContext)
            else:
                return self.getTypedRuleContext(dpParser.ConstraintContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.OR)
            else:
                return self.getToken(dpParser.OR, i)

        def getRuleIndex(self):
            return dpParser.RULE_constraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraints" ):
                listener.enterConstraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraints" ):
                listener.exitConstraints(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraints" ):
                return visitor.visitConstraints(self)
            else:
                return visitor.visitChildren(self)




    def constraints(self):

        localctx = dpParser.ConstraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constraints)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(dpParser.WHERE)
            self.state = 102
            self.constraint()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dpParser.OR:
                self.state = 103
                self.match(dpParser.OR)
                self.state = 104
                self.constraint()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BO(self):
            return self.getToken(dpParser.BO, 0)

        def constraint_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.Constraint_bodyContext)
            else:
                return self.getTypedRuleContext(dpParser.Constraint_bodyContext,i)


        def BC(self):
            return self.getToken(dpParser.BC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.COMA)
            else:
                return self.getToken(dpParser.COMA, i)

        def getRuleIndex(self):
            return dpParser.RULE_constraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint" ):
                listener.enterConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint" ):
                listener.exitConstraint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint" ):
                return visitor.visitConstraint(self)
            else:
                return visitor.visitChildren(self)




    def constraint(self):

        localctx = dpParser.ConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_constraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(dpParser.BO)
            self.state = 111
            self.constraint_body()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dpParser.COMA:
                self.state = 112
                self.match(dpParser.COMA)
                self.state = 113
                self.constraint_body()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(dpParser.BC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Constraint_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(dpParser.IdentifierContext,0)


        def COLON(self):
            return self.getToken(dpParser.COLON, 0)

        def components(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.ComponentsContext)
            else:
                return self.getTypedRuleContext(dpParser.ComponentsContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.OR)
            else:
                return self.getToken(dpParser.OR, i)

        def getRuleIndex(self):
            return dpParser.RULE_constraint_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstraint_body" ):
                listener.enterConstraint_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstraint_body" ):
                listener.exitConstraint_body(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstraint_body" ):
                return visitor.visitConstraint_body(self)
            else:
                return visitor.visitChildren(self)




    def constraint_body(self):

        localctx = dpParser.Constraint_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_constraint_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.identifier()
            self.state = 122
            self.match(dpParser.COLON)
            self.state = 123
            self.components()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dpParser.OR:
                self.state = 124
                self.match(dpParser.OR)
                self.state = 125
                self.components()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(dpParser.LiteralContext,0)


        def function(self):
            return self.getTypedRuleContext(dpParser.FunctionContext,0)


        def getRuleIndex(self):
            return dpParser.RULE_components

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponents" ):
                listener.enterComponents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponents" ):
                listener.exitComponents(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponents" ):
                return visitor.visitComponents(self)
            else:
                return visitor.visitChildren(self)




    def components(self):

        localctx = dpParser.ComponentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_components)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dpParser.AP]:
                self.state = 131
                self.literal()
                pass
            elif token in [dpParser.STRING]:
                self.state = 132
                self.function()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(dpParser.STRING, 0)

        def BRACKET(self):
            return self.getToken(dpParser.BRACKET, 0)

        def getRuleIndex(self):
            return dpParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = dpParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(dpParser.STRING)
            self.state = 136
            self.match(dpParser.BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GranularitiesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TBO(self):
            return self.getToken(dpParser.TBO, 0)

        def granularity(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dpParser.GranularityContext)
            else:
                return self.getTypedRuleContext(dpParser.GranularityContext,i)


        def TBC(self):
            return self.getToken(dpParser.TBC, 0)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(dpParser.COMA)
            else:
                return self.getToken(dpParser.COMA, i)

        def getRuleIndex(self):
            return dpParser.RULE_granularities

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGranularities" ):
                listener.enterGranularities(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGranularities" ):
                listener.exitGranularities(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGranularities" ):
                return visitor.visitGranularities(self)
            else:
                return visitor.visitChildren(self)




    def granularities(self):

        localctx = dpParser.GranularitiesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_granularities)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(dpParser.TBO)
            self.state = 139
            self.granularity()
            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dpParser.COMA:
                self.state = 140
                self.match(dpParser.COMA)
                self.state = 141
                self.granularity()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
